--- a/React/ReactFromScratch/package.json
+++ b/React/ReactFromScratch/package.json
@@ -10,14 +10,17 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.4.5",
-        "@babel/preset-env": "^7.4.5",
+        "@babel/core": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
         "@babel/preset-react": "^7.0.0",
-        "@types/react": "^16.8.22",
-        "@types/react-dom": "^16.8.4",
-        "autoprefixer": "^9.6.0",
+        "@types/material-ui": "^0.21.6",
+        "@types/react": "^16.8.23",
+        "@types/react-dom": "^16.8.5",
+        "@types/react-redux": "^7.1.1",
+        "@types/redux": "^3.6.0",
+        "autoprefixer": "^9.6.1",
         "babel-loader": "^8.0.6",
-        "css-loader": "^3.0.0",
+        "css-loader": "^3.1.0",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "prop-types": "^15.7.2",
@@ -25,16 +28,24 @@
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
         "ts-loader": "^6.0.4",
-        "typescript": "^3.5.2",
-        "webpack": "^4.35.0",
-        "webpack-cli": "^3.3.5",
+        "typescript": "^3.5.3",
+        "webpack": "^4.38.0",
+        "webpack-cli": "^3.3.6",
         "webpack-dev-server": "^3.7.2"
     },
     "dependencies": {
-        "@material-ui/core": "^4.1.3",
+        "@material-ui/core": "^4.2.1",
         "@material-ui/icons": "^4.2.1",
+        "@types/redux-immutable-state-invariant": "^2.1.1",
+        "@types/redux-logger": "^3.0.7",
         "node-sass": "^4.12.0",
         "react": "^16.8.6",
-        "react-dom": "^16.8.6"
+        "react-dom": "^16.8.6",
+        "react-redux": "^7.1.0",
+        "redux": "^4.0.4",
+        "redux-immutable-state-invariant": "^2.1.0",
+        "redux-logger": "^3.0.6",
+        "redux-promise-middleware": "^6.1.1",
+        "redux-thunk": "^2.3.0"
     }
 }
