--- a/React/ReactFromScratch/tsconfig.json
+++ b/React/ReactFromScratch/tsconfig.json
@@ -5,7 +5,9 @@
         "noImplicitAny": true,
         "module": "commonjs",
         "target": "es6",
-        "jsx": "react"
+        "jsx": "react",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
 	},
 	"exclude": [
 		"node_modules",
