--- a/React/ReactFromScratch/package.json
+++ b/React/ReactFromScratch/package.json
@@ -5,28 +5,34 @@
     "main": "index.js",
     "scripts": {
         "start": "webpack-dev-server --open --mode development",
-        "build": "webpack --mode production"
+        "build": "webpack --mode production",
+        "test": "jest"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.5.5",
-        "@babel/preset-env": "^7.5.5",
+        "@babel/preset-env": "^7.6.0",
         "@babel/preset-react": "^7.0.0",
+        "@babel/preset-typescript": "^7.6.0",
         "@types/material-ui": "^0.21.7",
         "@types/react": "^16.9.2",
         "@types/react-dom": "^16.9.0",
         "@types/react-redux": "^7.1.2",
         "@types/redux": "^3.6.0",
         "autoprefixer": "^9.6.1",
+        "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
         "css-loader": "^3.2.0",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
+        "jest": "^24.9.0",
         "prop-types": "^15.7.2",
+        "react-test-renderer": "^16.9.0",
         "sass-loader": "^7.3.1",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
+        "ts-jest": "^24.1.0",
         "ts-loader": "^6.0.4",
         "typescript": "^3.5.3",
         "webpack": "^4.39.2",
