--- a/React/ReactSetup/package.json
+++ b/React/ReactSetup/package.json
@@ -12,6 +12,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/react": "^16.9.11",
+        "@types/react-dom": "^16.9.3",
         "react": "^16.11.0",
         "react-dom": "^16.11.0"
     },
@@ -20,11 +22,13 @@
         "@babel/core": "^7.6.4",
         "@babel/preset-env": "^7.6.3",
         "@babel/preset-react": "^7.6.3",
+        "@babel/preset-typescript": "^7.6.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
         "html-webpack-plugin": "^3.2.0",
+        "typescript": "^3.6.4",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.9.0"
