--- a/React/ReactSetup/package.json
+++ b/React/ReactSetup/package.json
@@ -27,7 +27,11 @@
         "babel-loader": "^8.0.6",
         "babel-preset-env": "^1.7.0",
         "babel-preset-react": "^6.24.1",
+        "css-loader": "^3.2.0",
         "html-webpack-plugin": "^3.2.0",
+        "style-loader": "^1.0.0",
+        "tslint": "^5.20.0",
+        "tslint-immutable": "^6.0.1",
         "typescript": "^3.6.4",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.10",
