--- a/React/ReactSetup/package.json
+++ b/React/ReactSetup/package.json
@@ -12,6 +12,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@material-ui/core": "^4.5.2",
+        "@material-ui/icons": "^4.5.1",
+        "@material-ui/lab": "^4.0.0-alpha.30",
+        "@material-ui/styles": "^4.5.2",
         "@types/react": "^16.9.11",
         "@types/react-dom": "^16.9.3",
         "react": "^16.11.0",
