--- a/React/ReactSetup/tsconfig.json
+++ b/React/ReactSetup/tsconfig.json
@@ -30,10 +30,10 @@
 		"removeComments": true,
 		"alwaysStrict": true,
 		"allowUnreachableCode": false,
-		"noImplicitAny": true,
+		"noImplicitAny": false,
 		"noImplicitThis": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"forceConsistentCasingInFileNames": true,
