--- a/React/ReactSetup/package.json
+++ b/React/ReactSetup/package.json
@@ -19,7 +19,9 @@
         "@types/react": "^16.9.23",
         "@types/react-dom": "^16.9.5",
         "react": "^16.13.0",
-        "react-dom": "^16.13.0"
+        "react-dom": "^16.13.0",
+        "react-router-dom": "^5.1.2",
+        "redux": "^4.0.5"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
@@ -33,6 +35,7 @@
         "babel-preset-react": "^6.24.1",
         "css-loader": "^3.4.2",
         "html-webpack-plugin": "^3.2.0",
+        "redux-devtools": "^3.5.0",
         "style-loader": "^1.1.3",
         "tslint": "^5.20.1",
         "tslint-immutable": "^6.0.1",
