--- a/React/ReactSetup/.babelrc
+++ b/React/ReactSetup/.babelrc
@@ -2,4 +2,8 @@
     "@babel/preset-env",
     "@babel/preset-react",
     "@babel/preset-typescript"
-    ]}
+    ],
+    "plugins": [
+        "@babel/plugin-transform-runtime"
+      ]    
+}
