--- a/React/ReactSetup/package.json
+++ b/React/ReactSetup/package.json
@@ -16,16 +16,19 @@
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.45",
         "@material-ui/styles": "^4.9.0",
+        "@microsoft/signalr": "^3.1.3",
         "@types/react": "^16.9.23",
         "@types/react-dom": "^16.9.5",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2",
-        "redux": "^4.0.5"
+        "redux": "^4.0.5",
+        "rxjs": "^6.5.4"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.4",
         "@babel/core": "^7.8.7",
+        "@babel/plugin-transform-runtime": "^7.9.0",
         "@babel/preset-env": "^7.8.7",
         "@babel/preset-react": "^7.8.3",
         "@babel/preset-typescript": "^7.8.3",
