--- a/NetMQTest/NetMQTest.csproj
+++ b/NetMQTest/NetMQTest.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.3" />
     <PackageReference Include="NetMQ" Version="4.0.0.207" />
   </ItemGroup>
 
