--- a/NetMQTest/NetMQTest.csproj
+++ b/NetMQTest/NetMQTest.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.3" />
     <PackageReference Include="NetMQ" Version="4.0.0.207" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
   </ItemGroup>
 
 
