--- a/React/ReactSetup/package.json
+++ b/React/ReactSetup/package.json
@@ -38,7 +38,9 @@
         "babel-preset-react": "^6.24.1",
         "css-loader": "^3.4.2",
         "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.13.1",
         "redux-devtools": "^3.5.0",
+        "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
         "tslint": "^5.20.1",
         "tslint-immutable": "^6.0.1",
